Final Deliverables/plasma donor application/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plasma-donation-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: plasma-donation
